--- a/css/style.css
+++ b/css/style.css
@@ -2130,7 +2130,7 @@ i.fas.fa-chevron-right {
     .icon-group {
         height: 50px;
         margin-right: 22px;
-        width: 160px;
+        width: 170px;
     }
 
     .icon-group:last-child {
@@ -2138,7 +2138,7 @@ i.fas.fa-chevron-right {
     }
 
     .icon-group i {
-        margin-right: 13px;
+        margin-right: 23px;
         width: 34px !important;
     }
 
@@ -2267,6 +2267,7 @@ i.fas.fa-chevron-right {
     .service-card {
         width: 500px;
         margin-bottom: 0;
+        margin-top: 25px;
     }
 
     .service-button {
