--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -822,6 +822,14 @@ nav img {
         display: block;
     }
 
+    .sub2 li:first-child {
+        display: none;
+    }
+
+    .sub3 li:nth-child(2) {
+        display: none;
+    }
+
     .clip-bottom {
         display: none;
     }
@@ -998,8 +1006,8 @@ nav img {
         z-index: -1;;
     }
 
-    .sub2 li:first-child {
-        padding-top: 50px;
+    .sub2 li:nth-child(2) {
+        padding-top: 30px;
     }
 
     /*services sub menu */
@@ -1016,7 +1024,7 @@ nav img {
 
     .sub3 {
         top: -10px;
-        z-index: -1;;
+        z-index: -1;
     }
 
     .sub3 li:first-child {
