--- a/css/style.css
+++ b/css/style.css
@@ -2298,11 +2298,8 @@ i.fas.fa-chevron-right {
         height: auto;
     }
 
-    .gallery-topper {
-        margin-top: 0 !important;
-        margin-bottom: 0 !important;
-        padding-bottom: 50px;
-
+    .gallery-topper p {
+        margin: auto;
     }
 
     .gallery {
@@ -2415,13 +2412,40 @@ i.fas.fa-chevron-right {
     }
 
     .gallery-topper {
-        margin: auto;
+        background:url("../images/geo-steel.jpg");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        margin: 0 auto;
         position: relative;
-        padding-top: 50px;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        padding-top: 70px;
+        padding-bottom: 70px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+    }
+
+    .gallery-topper:before {
+        content: '';
+        background: #000;
+        width: 100%;
+        height: 100%;
+        opacity: .86;
+        position: absolute;
     }
 
     .gallery-topper h2 {
         text-align: center;
+        position: relative;
+        display: inline-block;
+        width: 500px !important;
+        margin: auto;
+        color: #f5f3f3;
     }
 
     .gallery-topper h2 span {
@@ -2429,16 +2453,17 @@ i.fas.fa-chevron-right {
     }
 
     .gallery-topper h2:before {
-        left: 540px;
+        position: absolute;
+        left: 10px;
     }
 
     .gallery-topper h2:after {
-        left: 540px;
+        left: 30px;
     }
 
     .gallery-topper h2 span:before {
         content: '';
-        right: 540px;
+        right: 10px;
         width: 50px;
         height: 2px;
         background: var(--primary);
@@ -2448,7 +2473,7 @@ i.fas.fa-chevron-right {
 
     .gallery-topper h2 span:after {
         content: '';
-        right: 540px;
+        right: 30px;
         width: 30px;
         height: 2px;
         background: var(--primary);
@@ -2459,6 +2484,9 @@ i.fas.fa-chevron-right {
     .gallery-topper p {
         width: 700px;
         text-align: center;
+        color: #f5f3f3;
+        position: relative;
+        z-index: 10;
     }
 
     .gallery div {
