chnaged promotions on concrete and rebar pages, made kyle fixes, removed gallery from the website, fixed up the jobs page

--- a/css/contact.css
+++ b/css/contact.css
@@ -820,7 +820,11 @@ form p{
         font-size: 18px;
         position: relative;
         z-index: 5;
-        margin-bottom: 50px;
+        margin-bottom: 0px;
+    }
+
+    .location-info p:last-child {
+        margin-bottom: 40px;
     }
 
     .location-info svg {
