--- a/css/materials.css
+++ b/css/materials.css
@@ -10,7 +10,7 @@ html, body {
 
 #landing-page {
     min-height: 300px;
-    background:url("../images/cement.jpg");
+    background:url("../images/materials.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
