--- a/css/rebar-fabrication.css
+++ b/css/rebar-fabrication.css
@@ -1,7 +1,5 @@
 /* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
 
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
-
 /*-- -------------------------- -->
 <---           LANDING          -->
 <--- -------------------------- -*/
@@ -84,7 +82,7 @@
     background: var(--primary);
     width: 50px;
     height: 2px;
-    left: 205px;
+    left: 150px;
     top: 60px;
 }
 
@@ -94,7 +92,7 @@
     background: var(--primary);
     width: 30px;
     height: 2px;
-    left: 205px;
+    left: 150px;
     top: 69px;
 }
 
@@ -242,9 +240,54 @@
     padding-top: 500px;
 }
 
-#promotions img {
+.promotion-image {
+    background:url("../images/promotional.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 100%;
+    height: 200px;
     padding-top: 20px;
+    border: 2px solid var(--primary);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: relative;
+    padding: 0;
+}
+
+.promotion-image:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: .5;
+}
+
+.promotion-image p {
+    color: var(--primary);
+    margin: 0;
+    line-height: 1.2em;
+    position: relative;
+    z-index: 10;
+}
+
+.promotion-image p:last-child {
+    font-size: 57px;
+    font-weight: 900;
 }
 
 .contact-info h2 {
@@ -399,13 +442,59 @@
         margin: auto;
     }
 
-    #promotions img {
+    .promotion-image {
+        background:url("../images/promotional.jpg");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
         width: 50%;
+        height: auto;
+        padding-top: 20px;
+        border: 2px solid var(--primary);
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        position: relative;
         padding: 0;
+    }
+    
+    .promotion-image:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: #000;
+        opacity: .5;
+    }
+    
+    .promotion-image p {
+        color: var(--primary);
+        margin: 0;
+        line-height: 1.2em;
+        position: relative;
+        z-index: 10;
+    }
+    
+    .promotion-image p:last-child {
+        font-size: 57px;
+        font-weight: 900;
     }
 
     .card-info {
         width: 50%;
+        padding: 0 1em;
     }
 
     .card-info h3 {
@@ -584,7 +673,8 @@
     <--- -------------------------- -*/
 
     .card {
-        width: 100%;
+        max-width: 1100px;
+        margin: auto;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -599,9 +689,14 @@
         top: -190px;
     }
 
-    #promotions img {
-        width: 550px;
-        padding-top: 0;
+    .promotion-image {
+        width: 50%;
+        padding: 0;
+        height: auto;
+    }
+
+    .card-info {
+        max-width: 50% !important;
     }
 
     .card-info {
@@ -630,7 +725,7 @@
     .valley-exterior {
         width: 600px !important;
         height: 450px !important;
-        padding-top: 400px;
+        padding-top: 0px;
         margin: 0;
     }
 
@@ -649,7 +744,7 @@
             -ms-flex-align: center;
                 align-items: center;
         padding-bottom: 100px;
-        padding-top: 300px;
+        padding-top: 250px;
         height: auto;
     }
 
