compressed all images

--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,7 @@ html, body {
 
 #landing-page {
     position: relative;
-    background:url("../images/Random\ 2.jpg");
+    background:url("../images/Random-2.jpg");
     background-size: cover;
 }
 
