--- a/css/style.css
+++ b/css/style.css
@@ -2068,6 +2068,7 @@ i.fas.fa-chevron-right {
     #building-the-future {
         height: 770px !important;
         padding-top: 30px;
+        padding-bottom: 50px;
     }
 
     .future-topper {
