--- a/css/promotions.css
+++ b/css/promotions.css
@@ -8,7 +8,7 @@
 
 #landing-page {
     min-height: 400px;
-    background:url("../images/Random\ 2.jpg");
+    background:url("../images/Product-1.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
