--- a/css/services.css
+++ b/css/services.css
@@ -10,7 +10,9 @@ html, body {
 
 #landing-page {
     position: relative;
-    background:url("../images/Random\ 2.jpg");
+    background:url("../images/services.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     min-height: 500px;
 }
 
@@ -421,7 +423,7 @@ html, body {
 
     #landing-page {
         background-attachment: fixed;
-        height: 750px;
+        height: 550px;
     }
 
     .landing-group {
