--- a/css/promotions.css
+++ b/css/promotions.css
@@ -369,6 +369,10 @@ ul li {
     <---          LANDING           -->
     <--- -------------------------- -*/
 
+    #landing-page {
+        height: 550px;
+    }
+
     .container {
         max-width: 1100px;
     }
