--- a/css/promotions.css
+++ b/css/promotions.css
@@ -1,6 +1,3 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
-
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
 
 /*-- -------------------------- -->
 <---           LANDING          -->
@@ -59,17 +56,17 @@
 <---          ADVANTECH         -->
 <--- -------------------------- -*/
 
-#advantech-promotion {
+.advantech-promotion {
     margin-bottom: 100px;
 }
 
-#advantech-promotion h2 span {
+.advantech-promotion h2 span {
     color: var(--primary);
     position: relative;
     display: block;
 }
 
-#advantech-promotion h2 span:before {
+.advantech-promotion h2 span:before {
     content: '';
     position: absolute;
     background: var(--primary);
@@ -79,7 +76,7 @@
     top: 10px;
 }
 
-#advantech-promotion h2 span:after {
+.advantech-promotion h2 span:after {
     content: '';
     position: absolute;
     background: var(--primary);
@@ -89,7 +86,7 @@
     top: 19px;
 }
 
-#advantech-promotion h2 {
+.advantech-promotion h2 {
     display: block;
     font-size: 2.1875em;
     font-weight: 900;
@@ -100,36 +97,12 @@
 .image-box {
     width: 100%;
     position: relative;
-    height: 230px;
-    margin: 50px 0;
-}
-
-.image-box:before {
-    content: '';
-    background:url("../images/geo-steel.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 90%;
-    height: 216px;
-    position: absolute;
-    top: 20px;
-    left: 0;
-}
-
-.image-box:after {
-    content: '';
-    width: 90%;
-    height: 216px;
-    position: absolute;
-    top: 20px;
-    left: 0;
-    background: var(--primary);
-    opacity: .9;
+    height: auto;
+    margin: 50px 0 0 0;
 }
 
 .image-box img {
-    width: 90%;
+    width: 100%;
     height: auto;
     position: absolute;
     top: 0;
@@ -224,6 +197,10 @@ ul li {
     font-size: 1em;
 }
 
+.experience {
+    height: auto;
+}
+
 .experience-content button {
     width: auto;
     margin-top: 15px;
@@ -242,11 +219,9 @@ ul li {
 <---            JOTO            -->
 <--- -------------------------- -*/
 
-.image-box.joto-box {
-}
-
-.joto-box img {
-    height: 216px;
+.joto-box {
+    margin-bottom: 50px;
+    height: 189px;
 }
 
 /*-- -------------------------- -->
@@ -258,13 +233,27 @@ ul li {
     height: 216px;
 }
 
-.group-box {
-    height: 200px;
+.group-box img {
+    height: 189px;
+    border: 1px solid var(--primary);
+    margin-bottom: 40px;
 }
 
 .group-box:before,
 .group-box:after {
     height: 189px;
+}
+
+/*-- -------------------------- -->
+<---           CONTACT          -->
+<--- -------------------------- -*/
+
+#contact {
+    position: relative;
+}
+
+.clippy-sales {
+    top:-199px;
 }
 
 
@@ -289,17 +278,17 @@ ul li {
     <---          ADVANTECH         -->
     <--- -------------------------- -*/
 
-    #advantech-promotion {
-        margin-bottom: 150px;
+    .advantech-promotion {
+        margin-bottom: 50px;
     }
 
     .image-box {
-        width: 450px;
+        width: 100%;
         height: 350px;
     }
 
     .image-box img {
-        height: 300px;
+        height: 100%;
         width: auto;
     }
 
@@ -318,13 +307,14 @@ ul li {
     <--- -------------------------- -*/
 
     .joto-box {
-        width: 510px !important;
+        width: 100%;
         height: 350px;
+        margin-bottom: 50px;
     }
 
     .joto-box img {
-        height: 300px;
-        width: auto;
+        height: auto;
+        width: 100%;
     }
 
     .joto-box:before,
@@ -342,13 +332,13 @@ ul li {
     <--- -------------------------- -*/
 
     .group-box {
-        width: 510px !important;
-        height: 320px;
+        width: 100%;
+        height: 350px;
     }
 
     .group-box img {
-        height: 300px;
-        width: auto;
+        height: auto;
+        width: 100%;
     }
 
     .group-box:before,
@@ -359,6 +349,10 @@ ul li {
 
     .experience-content button {
         margin-top: 70px;
+    }
+
+    .discount {
+        margin-bottom: 100px;
     }
 
 }
@@ -412,17 +406,37 @@ ul li {
     <---          ADVANTECH         -->
     <--- -------------------------- -*/
 
-    #advantech-promotion {
-        margin-bottom: 200px;
+    .advantech-promotion {
+        margin-bottom: 70px;
+        position: relative;
     }
 
-    .image-box {
-        height: 350px;
-        width: 450px;
+    .discount {
+        margin-bottom: 120px;
+    }
+
+    .adv {
+        background: url("/images/advantech-product.jpg");
+        background-size: cover;
+        background-position: center;
+        height: 700px;
+        width: 500px;
+    }
+    
+    .experience {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .experience-content {
+        width: 600px;
     }
 
     .image-box:before,
     .image-box:after {
+        display: none;
         height: 300px;
         width: 420px
     }
@@ -437,19 +451,11 @@ ul li {
     <--- -------------------------- -*/
 
     .joto-box {
-        height: 350px;
-        width: 500px;
-    }
-
-    .joto-box:before,
-    .joto-box:after {
-        height: 300px;
-        width: 450px
-    }
-
-    .joto-box img {
-        height: 300px;
-        width: auto;
+        background: url("/images/joto-promo.png");
+        background-size: cover;
+        background-position: center;
+        height: 700px;
+        width: 400px;
     }
 
     /*-- -------------------------- -->
@@ -457,19 +463,24 @@ ul li {
     <--- -------------------------- -*/
 
     .group-box {
-        height: 350px;
-        width: 520px;
+        background: url("/images/group-2.png");
+        background-size: cover;
+        background-position: center;
+        height: 700px;
+        width: 450px;
+        border: 1px solid var(--primary);
     }
 
-    .group-box:before,
-    .group-box:after {
-        height: 300px;
-        width: 480px
+    /*-- -------------------------- -->
+    <---           CONTACT          -->
+    <--- -------------------------- -*/
+
+    #contact {
+        position: relative;
     }
 
-    .group-box img {
-        height: 300px;
-        width: auto;
+    .clippy-sales {
+        top: -199px;
     }
 
 }
