--- a/css/services.css
+++ b/css/services.css
@@ -450,6 +450,10 @@ html, body {
         padding: 0 20px;
     }
 
+    .clippy-desktop {
+        bottom: -10px;
+    }
+
     /*-- -------------------------- -->
     <---          SERVICE           -->
     <--- -------------------------- -*/
