made the clippy desktop bottm -5px for all pages

--- a/css/about.css
+++ b/css/about.css
@@ -693,6 +693,10 @@ html, body {
         font-size: 60px;
     }
 
+    .clippy-desktop {
+        bottom: -5px;
+    }
+
 
     /*-- -------------------------- -->
     <---        COMMUNITIES         -->
