--- a/css/contact.css
+++ b/css/contact.css
@@ -568,6 +568,9 @@ form p{
     .landing-text {
         padding-left: 0;
         margin-left: 0;
+        -webkit-transform: translateY(-21px);
+            -ms-transform: translateY(-21px);
+                transform: translateY(-21px);
     }
     
     .landing-text h1 {
@@ -576,6 +579,7 @@ form p{
         font-size: 60px;
         text-align: left;
         width: auto;
+        margin-bottom: 0;
     }
 
     .landing-text h2 {
