--- a/css/promotions.css
+++ b/css/promotions.css
@@ -405,7 +405,9 @@ ul li {
         font-size: 60px;
         width: 600px;
         padding: 0 20px;
-        text-align: center;
+        text-align: left;
+        margin-bottom: 0;
+        margin-top: 0;
     }
 
     /*-- -------------------------- -->
