--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -919,6 +919,8 @@ nav img {
         top: 0px;
         padding-bottom: 0;
         font-size: 1em;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 
     .side-nav a:hover {
