--- a/css/promotions.css
+++ b/css/promotions.css
@@ -408,6 +408,11 @@ ul li {
         text-align: left;
         margin-bottom: 0;
         margin-top: 0;
+        margin-left: 0;
+    }
+
+    .landing-text h2 {
+        padding-left: 0;
     }
 
     /*-- -------------------------- -->
