--- a/css/promotions.css
+++ b/css/promotions.css
@@ -399,6 +399,9 @@ ul li {
     .landing-text {
         margin-top: 25px;
         width: auto;
+        -webkit-transform: translateY(-14px);
+            -ms-transform: translateY(-14px);
+                transform: translateY(-14px);
     }
 
     .landing-text h1 {
