--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -1314,12 +1314,15 @@ footer {
     padding-top: 50px;
 }
 
+.footer-location-info p {
+    width: 138px;
+}
+
 .footer-item h3 {
     text-align: left;
     color: #fff;
     font-size: 1.1875em;
     font-weight: 500;
-    text-transform: uppercase;
     height: auto;
     margin-bottom: 0;
 }
@@ -1376,6 +1379,14 @@ footer {
     margin-right: 15px;
     font-size: 1.25em;
     margin-top: 5px;
+}
+
+.address-icon {
+    transform: translateY(-30px);
+}
+
+.address-icon2 {
+    transform: translateY(-20px);
 }
 
 .uppercase {
