--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -1341,6 +1341,8 @@ footer {
     text-decoration: none;
     display: block;
     margin-right: 80px;
+    font-family: 'Poppins', sans-serif;
+}
 }
 
 .item-line {
