--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -1560,11 +1560,16 @@ footer {
         width: 300px;
         height: auto !important;
         position: absolute;
-        top: -20px;
+        top: -17px;
+    }
+
+    .footer-item p {
+        width: 145px;
     }
 
     .first-p {
-        padding-top: 40px;
+        padding-top: 42px;
+        width: 300px !important;
     }
 
     .footer-item {
@@ -1590,6 +1595,11 @@ footer {
         float: left;
         margin-right: 100px;
         margin-bottom: 10px;
+    }
+
+    .rebar-link {
+        width: 150px;
+        margin-right: 30px;
     }
 
     .footer-item a:hover {
