--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -1,5 +1,3 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
-
 
 /* 
                                 Core Styles 
@@ -1590,11 +1588,15 @@ footer {
     }
 
     .address-icon {
-        transform: translateY(-20px);
+        -webkit-transform: translateY(-20px);
+            -ms-transform: translateY(-20px);
+                transform: translateY(-20px);
     }
     
     .address-icon2 {
-        transform: translateY(-20px);
+        -webkit-transform: translateY(-20px);
+            -ms-transform: translateY(-20px);
+                transform: translateY(-20px);
     }
 
     .rebar-link {
@@ -1622,11 +1624,15 @@ footer {
     }
 
     .location {
-        transform: translateX(-40px);
+        -webkit-transform: translateX(-40px);
+            -ms-transform: translateX(-40px);
+                transform: translateX(-40px);
     }
 
     .phone-icon {
-        transform: translateY(-8px);
+        -webkit-transform: translateY(-8px);
+            -ms-transform: translateY(-8px);
+                transform: translateY(-8px);
     }
 
     .footer-location {
