--- a/css/inside.css
+++ b/css/inside.css
@@ -6,7 +6,7 @@
 
 #landing-page {
     min-height: 300px;
-    background:url("../images/Random\ 2.jpg");
+    background:url("../images/Random-2.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
