--- a/css/style.css
+++ b/css/style.css
@@ -1767,6 +1767,7 @@ i.fas.fa-chevron-right {
     }
 }
 
+/* desktop */
 @media screen and (min-width: 1025px) {
 
     /* 
@@ -1835,6 +1836,7 @@ i.fas.fa-chevron-right {
         height: 500px;
     }
 
+
     .card-content button {
         position: relative;
         left: 15px;
@@ -1874,6 +1876,10 @@ i.fas.fa-chevron-right {
         left: 500px;
         width: 1100px;
         bottom: -300px;
+    }
+
+    .card-content button {
+        margin-bottom: 60px;
     }
 
     .clippy {
