--- a/css/rebar-fabrication.css
+++ b/css/rebar-fabrication.css
@@ -149,6 +149,16 @@
     position: relative;
     z-index: 5;
     padding-bottom: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+            align-items: center;
 }
 
 .stat-item h3 {
