--- a/css/contact.css
+++ b/css/contact.css
@@ -41,10 +41,11 @@
     margin: 40px auto 40px 0;
     font-size: 30px;
     border-left: 5px solid var(--primary);
-    text-align: right;
+    text-align: left;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     width: 280px;
+    padding-left: 30px;
 }
 
 .landing-text h2 {
