--- a/css/materials.css
+++ b/css/materials.css
@@ -231,6 +231,10 @@ p {
     margin: 25px auto;
 }
 
+#partners img:hover {
+    pos
+}
+
 #contact {
     position: relative;
 }
@@ -496,12 +500,26 @@ p {
         width: 100%;
         height: 100%;
         transition: .3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .yellow:hover  {
         background: var(--primary);
         opacity: .7;
         transition: .3s ease;
+        cursor: pointer;
+    }
+
+    .yellow a {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        z-index: 1000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .yellow:hover .image-box {
