chnaged ine height of quick links in footer

--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -33,6 +33,10 @@ button {
     font-weight: 900;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 p {
     color: #4c4c4c;
     font-size: 1em;
@@ -1586,7 +1590,7 @@ footer {
         display: block;
         float: left;
         margin-right: 100px;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
     }
 
     .address-icon {
@@ -1604,6 +1608,10 @@ footer {
     .rebar-link {
         width: 150px;
         margin-right: 30px;
+    }
+
+    .footer-item:nth-child(2) a {
+        margin-bottom: 0px;
     }
 
     .footer-item a:hover {
