--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -8,6 +8,10 @@ body, html {
     overflow-x: hidden;
 }
 
+@font-face {
+    font-display: swap;
+}
+
 .container {
     padding: 0 30px;
 }
@@ -1564,7 +1568,7 @@ footer {
     }
 
     .first-p {
-        padding-top: 45px;
+        padding-top: 43px;
         width: 285px !important;
     }
 
@@ -1608,10 +1612,6 @@ footer {
     .rebar-link {
         width: 150px;
         margin-right: 30px;
-    }
-
-    .footer-item:nth-child(2) a {
-        margin-bottom: 0px;
     }
 
     .footer-item a:hover {
