--- a/css/about.css
+++ b/css/about.css
@@ -807,8 +807,8 @@ html, body {
 
     .sales-topper {
         display: flex;
-        flex-direction: row;
-        align-items: center;
+        flex-direction: column;
+        align-items: flex-start;
         justify-content: space-between;
     }
 
@@ -821,7 +821,6 @@ html, body {
     }
 
     .bridge {
-        padding-top: 70px;
         font-size: 16px !important;
     }
 
