fixed margin on buttons

--- a/css/about.css
+++ b/css/about.css
@@ -1023,8 +1023,10 @@ html, body {
     .job-button {
         width: 40%;
         margin: 10px;
-        margin-bottom: 120px;
     }
     
+    .apply-button {
+        margin-bottom: 100px;
+    }
 
 }
