--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,104 +1,279 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
 
 /*-- -------------------------- -->
-<---           LANDING          -->
+<---          LANDING           -->
 <--- -------------------------- -*/
 
-#landing-page {
-    min-height: 300px;
-    background:url("../images/Random\ 2.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-}
-
-.landing-group {
-    padding: 0;
-    margin: auto;
-    margin-right: auto;
-}
-
 .landing-text h1 {
-    padding-top: 0;
-    margin: 40px auto;
-    font-size: 30px;
+    padding: 0 0 0 20px ;
     border-left: 5px solid var(--primary);
-    text-align: right;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    width: 280px;
 }
 
-.clippy-desktop {
-    height: 80px;
-    background: #fff;
+#landing-page p {
+    display: none;
+    position: absolute;
+    width: 100%;
+    bottom: 8px;
+    font-size: 5em;
+    color: #4c4c4c;
+    opacity: .9;
+    font-weight: 900;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+/*-- -------------------------- -->
+<---          GALLERY           -->
+<--- -------------------------- -*/
+
+#gallery {
+    position: relative;
+}
+
+.gallery {
+    height: auto;
+}
+
+.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+.gallery img:hover {
+    cursor: pointer;
+}
+
+.modal {
+    position: fixed;
+    top: 2000px;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    z-index: 20000;
+    visibility: hidden;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+} 
+
+.modal img {
     width: 100%;
     position: absolute;
-    bottom: -5px;
-    -webkit-clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
-            clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    margin: 0 auto !important;
 }
 
-@media screen and (min-width: 600px) and (max-width: 1024px) {
-
-    /*-- -------------------------- -->
-    <---          LANDING           -->
-    <--- -------------------------- -*/
-
-    h1:after,
-    h1:before {
-        display: none;
-    }
-
-    .landing-text h1 {
-        font-size: 45px;
-        width: auto;
-        padding: 0 20px;
-    }
-
+.modal i {
+    height: auto;
+    color: #fff;
+    font-size: 1.875em;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 2000;
 }
 
-@media screen and (min-width: 1025px) {
+.modal i:hover {
+    cursor: pointer;
+    opacity: .6;
+}
+
+/* Modals Visibility */
+
+.modal-one,
+.modal-two,
+.modal-three,
+.modal-four,
+.modal-five,
+.modal-six,
+.modal-seven,
+.moadl-eight,
+.modal-nine,
+.modal-ten,
+.modal-eleven,
+.modal-twelve,
+.modal-thirteen,
+.modal-fourteen,
+.modal-fifteen,
+.modal-sixteen,
+.modal-seventeen,
+.moadl-eighteen,
+.modal-nineteen,
+.modal-twenty,
+.modal-twenty-one {
+    visibility: hidden;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+}
+
+/* Modal Visibility Clicked */
+
+.modal-one.clicked,
+.modal-two.clicked,
+.modal-three.clicked,
+.modal-four.clicked,
+.modal-five.clicked,
+.modal-six.clicked,
+.modal-seven.clicked,
+.modal-eight.clicked,
+.modal-nine.clicked,
+.modal-ten.clicked,
+.modal-eleven.clicked,
+.modal-twelve.clicked,
+.modal-thirteen.clicked,
+.modal-fourteen.clicked,
+.modal-fifteen.clicked,
+.modal-sixteen.clicked,
+.modal-seventeen.clicked,
+.modal-eighteen.clicked,
+.modal-nineteen.clicked,
+.modal-twenty.clicked,
+.modal-twenty-one.clicked {
+    visibility: visible;
+    margin: auto;
+    z-index: 2000;
+    top: 0;
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease;
+    position: fixed;
+}
+
+/* Clicked Images */
+
+html.clicked {
+    overflow-y: hidden;
+}
+
+.clippy-sales {
+    position: absolute;
+    bottom: -1px;
+    width: 100%;
+}
+
+/*-- -------------------------- -->
+<---          CONTACT           -->
+<--- -------------------------- -*/
+
+
+
+/* Tablets */
+@media screen and (min-width: 500px) and (max-width: 1024px) {
+
+    #home-h {
+        text-align: center;
+        font-size: 3.125em;
+        width: 100%;
+    }
 
     /*-- -------------------------- -->
-    <---          LANDING           -->
+    <---          GALLERY           -->
     <--- -------------------------- -*/
 
-    .landing-group {
+    #gallery {
+        padding: 50px;
+    }
+
+    .gallery {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+        padding: 10px;
+    }
+
+    .gallery img {
+        width: 50%;
+        padding: 20px;
+    }
+
+    .modal img {
+        width: 100%;
+    }
+
+    .clippy-sales {
+        width: 100%;
+        left: 0;
+        right: 0;
+    }
+}
+
+/* Desktop */
+@media screen and (min-width: 1025px) {
+
+    #home-h {
+        -webkit-transform: translateY(50px);
+        -ms-transform: translateY(50px);
+            transform: translateY(50px);
+    }
+
+    #hero {
+        background-attachment: fixed;
+    }
+
+    /*-- -------------------------- -->
+    <---          GALLERY           -->
+    <--- -------------------------- -*/
+
+    #landing-page {
+        min-height: 550px;
+    }
+
+    .gallery {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+        padding: 10px;
+        max-width: 1100px;
+        margin: 100px auto;
+    }
+
+    .gallery img {
+        width: 300px;
+        margin: 15px;
+    }
+
+    .modal {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
-        height: 400px;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 
-    .landing-text {
-        margin-top: 25px;
+    .modal img {
+        display: block;
+        height: 600px;
+        width: auto;
+        height: auto;
+        margin: auto !important;
     }
 
-    .landing-text h1 {
-        font-size: 55px;
-        width: 550px;
-        padding: 0 20px;
+    .clippy-sales {
+        bottom: -101px;
     }
 
 }
